fixed h1 alignment with smaller screen

--- a/styles.css
+++ b/styles.css
@@ -46,15 +46,16 @@
     U+FEFF, U+FFFD;
 }
 
-h1, h2, h3 {
-    color: lightgray;
-    font-family: fantasy;
-    letter-spacing: 1.3;
+h1,
+h2,
+h3 {
+  color: lightgray;
+  font-family: fantasy;
+  letter-spacing: 1.3;
 }
 
 body {
-    background-color: black;
-
+  background-color: black;
 }
 
 header {
@@ -62,26 +63,26 @@ header {
 }
 
 nav {
-    background-color: lightgray;
-    text-align: center;
+  background-color: lightgray;
+  text-align: center;
 }
 
 ul {
-    display: inline-flex;
-    width: 100%;
-    justify-content: center;
-    padding-left: 0;
+  display: inline-flex;
+  width: 100%;
+  justify-content: center;
+  padding-left: 0;
 }
-  
+
 li {
-    padding: 15px;
-    list-style: none;
-    font-weight: 200;
+  padding: 15px;
+  list-style: none;
+  font-weight: 200;
 }
 
 main {
-    display: grid;
-    grid-template: repeat(8, 100px) / 1fr 5fr 1fr;
+  display: grid;
+  grid-template: repeat(8, 100px) / 1fr 5fr 1fr;
 }
 
 h1 {
@@ -91,40 +92,42 @@ h1 {
   grid-area: 1 / 2 / 3 / 3;
   z-index: 1;
   padding-top: 30px;
-
 }
 
 banner {
-    width: 100%;
-    height: 700px;
-    background-image: url("photos/computer.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    grid-area: 1 / 2 / 7 / 3;
+  width: 100%;
+  height: 700px;
+  background-image: url("photos/computer.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  grid-area: 1 / 2 / 7 / 3;
 }
 
 .intro {
-    grid-area: 7 / 2 / 8 / 3;
-    padding: 0 10%;
-    max-width: 950px;
+  grid-area: 7 / 2 / 8 / 3;
+  padding: 0 10%;
+  max-width: 950px;
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
 }
 
-@media only screen and (max-width: 1000px)  {
-    h2 {
-        padding: 0;
+@media only screen and (max-width: 1000px) {
+    h1 {
+        padding-top: 50px;
     }
-    main {
-        grid-template: repeat(12, 100px) / 1fr 20fr 1fr;
-    }
-    banner  {
-        background-size: contain;
-    }
-    .intro {
-        grid-area: 6 / 2 / 8 / 3;
-    }
+  h2 {
+    padding: 0;
+  }
+  main {
+    grid-template: repeat(12, 100px) / 1fr 20fr 1fr;
+  }
+  banner {
+    background-size: contain;
+  }
+  .intro {
+    grid-area: 6 / 2 / 8 / 3;
+  }
 }
